--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,14 @@
             });
         </script>
 
+        <!-- Distortion History -->
+        <div class="mt-4 mb-3">
+            <a href="/distortion_history" class="btn btn-primary">View My Distortion History</a>
+        </div>
+
+        <!-- View Progress -->
+        <!-- <a href="/progress" class="btn btn-success">View Progress</a> -->
+
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
